--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.17"
+    "@types/react": "^17.0.17",
+    "@types/react-dom": "^17.0.9"
   }
 }
